# design_pattern_poc

./: main.py  master-key.pem  pattern.md  pyproject.toml  readme.md
api/: dependencies.py  health.py  user.py
app/: server.py
app/common/: base_model.py  base_repo.py  ibase_repo.py
app/user/: user_model.py  user_repo.py  user_service.py
app/user/interfaces/: i_user_repo.py  i_user_service.py
app/user/schemas/: user_create_request.py
core/: __init__.py
core/db/: database copy.py  database-withlock-release.py  database.py  databasetest.py
core/dependencies/: logging.py  logging.yaml
core/exceptions/: base.py
