[project]
name = "designpatternpoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "click>=8.1.8",
    "fastapi>=0.115.8",
    "motor>=3.7.0",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pydash>=8.0.5",
    "pyjwt>=2.10.1",
    "pymongo[encryption]>=4.11.1",
    "uvicorn>=0.34.0",
]
